--- a/style.css
+++ b/style.css
@@ -136,6 +136,8 @@ body {
 .jscolor {
   border-style: solid;
   border-radius: 5px;
+  border-width: 1px;
+  border-color: rgba(0, 0, 0, 0.2);
   height: 35px;
   width: 120px;
   margin-left: 3px;
